# IIRFilters

./: CMakeLists.txt  GEMINI.md  README.md
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Helpers/: Parameters.h
Source/dsp/: AudioFilter.cpp  AudioFilter.h  Biquad.cpp  Biquad.h
Source/fxobjs/: planport.md
Source/gui/: index.html  main.js  style.css
